src/styles/header.css
/* Header */

body {
    margin: 0;
    min-height: 100vh;
    background-color: rgb(255, 255, 255);
}

.top-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgb(255, 255, 255);
}

.header-button {
    color: #ed93b4;
    text-decoration: none;
}

.line1 {
    width: 100%;
    height: 1.5px;
    background-color: #ed93b4;
    border-color: #ed93b4;
}

.right-header-links {
    display: flex;
    flex-direction: row;
    list-style-type: none;
    align-items: center;
    gap: 75px;
    height: 100px;
    font-size: 29px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    /* Bold */
    padding-right: 30px;
}

.image-header {
    width: 170px;
    height: 90px;
    object-fit: cover;
    display: block;
    margin-left: 15px;
}

/* New styles for mobile menu */
.menu-icon {
    display: none;
    flex-direction: column;
    cursor: pointer;
}

.menu-icon .bar {
    width: 35px;
    height: 3px;
    background-color: #000;
    margin: 5px;
    transition: 0.4s;
}

a {
    text-decoration: none;
}

.image-header-cart {
    height: 60px;
    width: 70px;
}




@media (max-width: 1019px) {
    .top-header {
        display: flex;
        flex-direction: column;
    }

    .right-header-links {
        flex-direction: column;
        gap: 20px;
        font-size: 23px;
        position: static;
        width: 100%;
        height: auto;
        overflow: hidden;
        transition: max-height 0.3s ease-in-out, visibility 0.3s ease-in-out;
        max-height: 0;
        visibility: hidden;
        padding-left: 27px;
        align-items: flex-start;
        margin: 0;
        padding-top: 10px;
        padding-bottom: 15px;
    }

    .header {
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;
    }

    .image-header {
        width: 150px;
        height: 75px;
        padding-top: 15px;
    }

    .header-button {
        color: #f1b2c9;
        font-size: 19px;
        border-radius: 40px;
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 4px;
        padding-bottom: 4px;
        border: 2px solid #f1b2c9;
        background-color: white;
    }

    .header-button.active {
        color: white;
        font-size: 19px;
        border-radius: 40px;
        padding-left: 15px;
        padding-right: 15px;
        padding-top: 4px;
        padding-bottom: 4px;
        background-color: #f1b2c9;
    }

    .menu-icon {
        display: flex;
        padding: 30px 20px 0 0;
        /* Adjust padding for better spacing */
        background-color: white;
    }

    .border-menu {
        background-color: #f3f3f3;
        border: 1px solid rgb(219, 219, 219);
        /* Ensure there is a border */
        padding: 10px;
        border-radius: 10px;
    }

    .border-menu.clicked {
        border: 1px solid black;
        background-color: #c0c0c0;
        /* Change to desired color on click */
    }


    .right-header-links.open {
        max-height: 300px;
        /* Adjust this value based on the number of menu items */
        visibility: visible;
        /* Show menu */
        margin: 0;
        /* Reset margin */
        padding-top: 10px;
        padding-bottom: 15px;
        padding-left: 27px;
    }

    .image-header-cart {
        height: 50px;
        width: 65px;
        padding-left: 12px;
    }

    .cart-header {
        height: 40px;
    }
}

